--- a/_config.yml
+++ b/_config.yml
@@ -57,16 +57,16 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: edwardhey
+# disqus_username: edwardhey
 
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: qiubaiying.github.io    #仓库名称
-  owner: qiubaiying    #github用户名
-  admin: qiubaiying
+  clientID: 169a6e4870d93b345149                            #生成的clientID
+  clientSecret: 271beb4c3cf51c3d8f1f08f39fe4de7b96a9c428    #生成的clientSecret
+  repo: edwardhey.github.io    #仓库名称
+  owner: edwardhey    #github用户名
+  admin: edwardhey
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
